--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,25 @@
+buildscript {
+    repositories {
+        maven {
+            url "${artifactory_contextUrl}/plugins-release"
+        }
+    }
+    dependencies {
+        classpath 'se.transmode.gradle:gradle-docker:1.2'
+    }
+}
+
+plugins {
+    id "com.github.johnrengelman.shadow" version "2.0.1"
+}
+apply plugin: 'groovy'
+apply plugin: 'docker'
+apply plugin: 'application'
+
 group 'de.gdaag.wss.redpanda'
 version '1.0-SNAPSHOT'
 
-apply plugin: 'groovy'
+mainClassName = 'de.gdaag.wss.redpanda.testcontainerszap.Main'
 
 repositories {
     maven {
@@ -12,4 +30,21 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.5.0-beta-1'
     compile group: 'org.testcontainers', name: 'testcontainers', version: '1.4.2'
+}
+
+docker {
+    def registryUrl = System.getenv('CI_REGISTRY') ?: "missing"
+    baseImage = "docker.repository.corp.gdaag.de/wss/java-build-container"
+    registry = registryUrl
+}
+
+task buildDocker(type: Docker, dependsOn: build) {
+    def jarName = "${rootProject.name}.jar"
+    addFile(shadowJar.archivePath, jarName)
+    entryPoint(["java","-jar", "$jarName"])
+
+    push = System.getenv('CI_REGISTRY_IMAGE') ? true : false
+
+    tagVersion = System.getenv('CI_COMMIT_TAG') ?: "latest"
+    tag = System.getenv('CI_REGISTRY_IMAGE') ?: "${project.group}/${applicationName}"
 }
