--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all:2.5.0-beta-1'
     compile group: 'org.testcontainers', name: 'testcontainers', version: '1.4.2'
+
+    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
 }
 
 docker {
